--- a/Module 1 - Basic Python.ipynb
+++ b/Module 1 - Basic Python.ipynb
@@ -179,19 +179,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#this is a list with 3 items; the index count is 0, 1, 2\n",
-    "colors = ['red', 'yellow', 'blue', '    purple     ']"
+    "colors = ['red', 'yellow', 'blue', '    purple     ','gold']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 64,
    "metadata": {
     "scrolled": false
    },
@@ -207,7 +207,9 @@
       "blue\n",
       "4\n",
       "    purple     \n",
-      "15\n"
+      "15\n",
+      "gold\n",
+      "4\n"
      ]
     }
    ],
