--- a/Module 1 - Basic Python.ipynb
+++ b/Module 1 - Basic Python.ipynb
@@ -186,7 +186,7 @@
    "outputs": [],
    "source": [
     "#this is a list with 3 items; the index count is 0, 1, 2\n",
-    "colors = ['red', 'yellow', 'blue', '    purple     ','gold']"
+    "colors = ['red', 'yellow', 'blue', '    purple     ','gold','silver']"
    ]
   },
   {
@@ -227,6 +227,15 @@
    "source": [
     "- The len function returns the length (number of) items"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
